# tetris

./: .gitignore  CMakeLists.txt  makefile  ohjelma
Debug/: tetris.ilk
Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
libs/: CMakeLists.txt
src/: core.h  element2d.cpp  element2d.h  engine.cpp  engine.h  fileloader.cpp  fileloader.h  game.cpp  game.h  helper_classes.h  inputmanager.cpp  inputmanager.h  interface.cpp  interface.h  main.cpp  math.hpp  rect.cpp  rect.h  renderer.cpp  renderer.h  shader.h  triangle.cpp  triangle.h
src/shaders/: shader.frag  shader.vs
tetris.dir/Debug/tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
